# ex4

./: AStar.cpp  AStar.h  AStarTrail.txt  AllMatrixInTrail.txt  BFS.cpp  BFS.h  BFSTrail.txt  BestFS.cpp  BestFS.h  BestFSTrail.txt  Boot.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DFS.cpp  DFS.h  DFSTrail.txt  FileCacheManager.cpp  FileCacheManager.h  Matrix.cpp  Matrix.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Point.cpp  Point.h  README  README.md  SearchSolver.cpp  SearchSolver.h  Searchable.h  Searcher.h  Solver.h  State.cpp  State.h  (+6 more)
